// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`responseUtils addCache should not restore the message if action is from macro 1`] = `
Object {
  "action": Object {
    "args": Immutable.Map {
      "body_html": "<div><strong>Hello, check this out</strong></div><div><br></div><figure style=\\"display:inline-block;margin:0\\"><img src=\\"https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/image-e99e1a8a-990b-4df1-876d-cd1ced6df667.png\\" width=\\"400px\\" style=\\"max-width: 100%\\"></figure><br><div><em>should be good now</em></div>",
      "body_text": "Hello, check this out

 

should be good now",
    },
    "currentUser": Immutable.Map {},
    "fromMacro": true,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {},
    "ticketId": "0",
  },
  "cacheAdded": true,
  "contentState": "<div><br></div>",
  "forceFocus": false,
  "forceUpdate": false,
  "state": Immutable.Map {
    "state": Immutable.Map {
      "selectionState": null,
      "emailExtraAdded": false,
      "forceFocus": false,
      "appliedMacro": null,
      "dirty": false,
      "forceUpdate": false,
      "firstNewMessage": true,
      "contentState": "<div><br></div>",
      "cacheAdded": true,
    },
    "_internal": Immutable.Map {
      "loading": Immutable.Map {
        "addAttachment": false,
        "submitMessage": false,
      },
    },
    "newMessage": Immutable.Map {
      "channel": "email",
      "mention_ids": Immutable.List [],
      "macros": Immutable.List [],
      "body_html": "",
      "public": true,
      "body_text": "",
      "subject": "",
      "via": "helpdesk",
      "from_agent": true,
      "attachments": Immutable.List [],
      "sender": null,
      "source": Immutable.Map {
        "type": "email",
        "from": Immutable.Map {},
        "to": Immutable.List [],
        "cc": Immutable.List [],
        "bcc": Immutable.List [],
        "extra": Immutable.Map {
          "include_thread": false,
        },
      },
    },
  },
}
`;

exports[`responseUtils addCache should restore message state from cache when cache is not added 1`] = `
Object {
  "action": Object {
    "args": Immutable.Map {
      "body_html": "<div><strong>Hello, check this out</strong></div><div><br></div><figure style=\\"display:inline-block;margin:0\\"><img src=\\"https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/image-e99e1a8a-990b-4df1-876d-cd1ced6df667.png\\" width=\\"400px\\" style=\\"max-width: 100%\\"></figure><br><div><em>should be good now</em></div>",
      "body_text": "Hello, check this out

 

should be good now",
    },
    "currentUser": Immutable.Map {},
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {},
    "ticketId": "0",
  },
  "cacheAdded": true,
  "contentState": "<div>Foo bar baz</div>",
  "emailExtraAdded": true,
  "forceFocus": true,
  "forceUpdate": true,
  "selectionState": Immutable.Record {
    "anchorKey": "foo",
    "anchorOffset": "1",
    "focusKey": "bar",
    "focusOffset": "2",
    "isBackward": false,
    "hasFocus": false,
  },
  "state": Immutable.Map {
    "state": Immutable.Map {
      "selectionState": null,
      "emailExtraAdded": false,
      "forceFocus": false,
      "appliedMacro": null,
      "dirty": false,
      "forceUpdate": false,
      "firstNewMessage": true,
      "contentState": "<div><br></div>",
      "cacheAdded": true,
    },
    "_internal": Immutable.Map {
      "loading": Immutable.Map {
        "addAttachment": false,
        "submitMessage": false,
      },
    },
    "newMessage": Immutable.Map {
      "channel": "email",
      "mention_ids": Immutable.List [],
      "macros": Immutable.List [],
      "body_html": "",
      "public": true,
      "body_text": "",
      "subject": "",
      "via": "helpdesk",
      "from_agent": true,
      "attachments": Immutable.List [],
      "sender": null,
      "source": Immutable.Map {
        "type": "email",
        "from": Immutable.Map {},
        "to": Immutable.List [],
        "cc": Immutable.List [],
        "bcc": Immutable.List [],
        "extra": Immutable.Map {
          "include_thread": false,
        },
      },
    },
  },
}
`;

exports[`responseUtils addCache should set cacheAdded in context to true and not restore the message from storage when cache is added 1`] = `
Object {
  "action": Object {
    "args": Immutable.Map {
      "body_html": "<div><strong>Hello, check this out</strong></div><div><br></div><figure style=\\"display:inline-block;margin:0\\"><img src=\\"https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/image-e99e1a8a-990b-4df1-876d-cd1ced6df667.png\\" width=\\"400px\\" style=\\"max-width: 100%\\"></figure><br><div><em>should be good now</em></div>",
      "body_text": "Hello, check this out

 

should be good now",
    },
    "currentUser": Immutable.Map {},
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {},
    "ticketId": "0",
  },
  "cacheAdded": true,
  "contentState": "<div><br></div>",
  "forceFocus": false,
  "forceUpdate": false,
  "state": Immutable.Map {
    "state": Immutable.Map {
      "selectionState": null,
      "emailExtraAdded": false,
      "forceFocus": false,
      "appliedMacro": null,
      "dirty": false,
      "forceUpdate": false,
      "firstNewMessage": true,
      "contentState": "<div><br></div>",
      "cacheAdded": true,
    },
    "_internal": Immutable.Map {
      "loading": Immutable.Map {
        "addAttachment": false,
        "submitMessage": false,
      },
    },
    "newMessage": Immutable.Map {
      "channel": "email",
      "mention_ids": Immutable.List [],
      "macros": Immutable.List [],
      "body_html": "",
      "public": true,
      "body_text": "",
      "subject": "",
      "via": "helpdesk",
      "from_agent": true,
      "attachments": Immutable.List [],
      "sender": null,
      "source": Immutable.Map {
        "type": "email",
        "from": Immutable.Map {},
        "to": Immutable.List [],
        "cc": Immutable.List [],
        "bcc": Immutable.List [],
        "extra": Immutable.Map {
          "include_thread": false,
        },
      },
    },
  },
}
`;

exports[`responseUtils toReplyAreaStateJS should convert immutable state to object 1`] = `
Object {
  "appliedMacro": null,
  "cacheAdded": true,
  "contentState": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "text": "",
      "type": "unstyled",
    },
  ],
  "dirty": false,
  "emailExtraAdded": false,
  "firstNewMessage": true,
  "forceFocus": true,
  "forceUpdate": true,
}
`;

exports[`responseUtils updateNewMessageWithContentState should not mutate the arguments 1`] = `
Object {
  "attachments": Array [],
  "body_html": "",
  "body_text": "",
  "channel": "email",
  "from_agent": true,
  "macros": Array [],
  "mention_ids": Array [],
  "public": true,
  "sender": null,
  "source": Object {
    "bcc": Array [],
    "cc": Array [],
    "extra": Object {
      "include_thread": false,
    },
    "from": Object {},
    "to": Array [],
    "type": "email",
  },
  "subject": "",
  "via": "helpdesk",
}
`;

exports[`responseUtils updateNewMessageWithContentState should set stripped_text and stripped_body when contentState contains email extras 1`] = `
Object {
  "attachments": Array [],
  "body_html": "<div>Foo bar</div><div><br></div><div>Signature</div>",
  "body_text": "Foo bar

Signature",
  "channel": "email",
  "from_agent": true,
  "macros": Array [],
  "mention_ids": Array [],
  "public": true,
  "sender": null,
  "source": Object {
    "bcc": Array [],
    "cc": Array [],
    "extra": Object {
      "include_thread": false,
    },
    "from": Object {},
    "to": Array [],
    "type": "email",
  },
  "stripped_html": "<div>Foo bar</div>",
  "stripped_text": "Foo bar",
  "subject": "",
  "via": "helpdesk",
}
`;

exports[`responseUtils updateNewMessageWithContentState should unset emailExtraAdded, stripped_text and stripped_body when contentState does not contain email extras 1`] = `
Object {
  "attachments": Array [],
  "body_html": "<div>No extras</div>",
  "body_text": "No extras",
  "channel": "email",
  "from_agent": true,
  "macros": Array [],
  "mention_ids": Array [],
  "public": true,
  "sender": null,
  "source": Object {
    "bcc": Array [],
    "cc": Array [],
    "extra": Object {
      "include_thread": false,
    },
    "from": Object {},
    "to": Array [],
    "type": "email",
  },
  "subject": "",
  "via": "helpdesk",
}
`;

exports[`responseUtils updateNewMessageWithContentState should update body_html and body_text 1`] = `
Object {
  "attachments": Array [],
  "body_html": "<div>Foo bar baz</div>",
  "body_text": "Foo bar baz",
  "channel": "email",
  "from_agent": true,
  "macros": Array [],
  "mention_ids": Array [],
  "public": true,
  "sender": null,
  "source": Object {
    "bcc": Array [],
    "cc": Array [],
    "extra": Object {
      "include_thread": false,
    },
    "from": Object {},
    "to": Array [],
    "type": "email",
  },
  "subject": "",
  "via": "helpdesk",
}
`;
